# mfc

./: .env.dev  .env.infra  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.infra.yaml  docker-compose.yaml  pyproject.toml
backend/: config.py  gunicorn.conf.py  main.py  setup.py  tasks.py  utils.py
backend/api/: deps.py  handlers.py  monitoring.py  router.py  schemas.py
backend/api/v1/: router.py  schemas.py
backend/celery/: base.py  inference.py  tasks.py
backend/db/: engine.py  holder.py  models.py
backend/db/migrations/: env.py
backend/db/migrations/versions/: 2023-08-25_19bd3219ebac_init_db.py
backend/db/repositories/: base.py  task.py
backend/static/js/: main.js
backend/templates/: index.html
backend/views/: deps.py  router.py
docker/inference/: backend.dockerfile
docker/inference/nginx/: nginx.conf  nginx.dockerfile
docker/infra/: docker-compose.yaml
docker/infra/mlflow/: mlflow-start.sh  mlflow.dockerfile
docker/infra/nginx/: make_auth.sh  nginx.conf.template  nginx.dockerfile
docker/infra/prometheus/: prometheus-start.sh  prometheus.dockerfile  prometheus.yml.template
